--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-uid": "^2.2.0",
     "styled-components": "^5.0.1",
     "styled-css-grid": "^1.2.1"
   },
