--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ids": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-uid": "^2.2.0",
+    "shuffle-array": "^1.0.1",
     "styled-components": "^5.0.1",
     "styled-css-grid": "^1.2.1"
   },
